--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git Me Dogs</title>
+    <link rel="shortcut icon" href="">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <body>
+        <main class="container">
+            <h1>Dog API: A Simple Example</h1>
     
+            <form>
+              <input type="submit" value="Get a dog pic!">
+            </form>
+            <section class="results hidden">
+              <h2>Look at this dog!</h2>
+              <img class="results-img" alt="placeholder">
+            </section>
+        </main>
+        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+        <script src="index.js"></script>
+    </body>
 </body>
 </html>
