--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <body>
         <main class="container">
-            <h1>Dog API: A Simple Example</h1>
+            <h1>How Many dogs do you want?</h1>
     
             <form>
               <input type="submit" value="Get a dog pic!">
