--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h1>How Many dogs do you want?</h1>
     
             <form>
+                <input type"number" id="input-selection" required>
               <input type="submit" value="Get a dog pic!">
             </form>
             <section class="results hidden">
