--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <input type="submit" value="Get a dog pic!">
             </form>
             <section class="results hidden">
-              <h2>Look at this dog!</h2>
+              <h2>Git Me Dogs!</h2>
               <div class = "dog-wrapper">
                   <ul class = "image-list">
 
