fixed placeholder bug

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   <ul class = "image-list">
 
                   </ul>
-              <img class="results-img" alt="placeholder">
+              <!-- <img class="results-img" alt="placeholder"> -->
               </div>
             </section>
         </main>
