Added breed search feature

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
-    <body>
-        <main class="container">
+<body>        
             <h1>How Many dogs do you want?</h1>
     
             <form class = "js-form">
                 <!-- make default value -->
                 <input type="number" id="input-selection" value = "3" class = "js-input">
+                <input type="text" id="breed-selection" value = "african" class = "breed-input">
               <input type="submit" value="Get a dog pic!">
             </form>
+
+            <main class="container"></main>
             <section class="results hidden">
               <h2>Git Me Dogs!</h2>
               <div class = "dog-wrapper">
@@ -29,6 +30,5 @@
         </main>
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <script src="index.js"></script>
-    </body>
 </body>
 </html>
